[workspace]
members = [".", "ewc-wayland-scanner"]

[workspace.package]
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
readme = "README.md"
edition = "2021"

[package]
name = "ewc"
version = "0.1.0"
authors.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
ewc-wayland-scanner = { path = "ewc-wayland-scanner" }
libc = "0.2"
memmap2 = "0.8"
pixman = "0.1"
shmemfdrs = "0.1.4"
signal-hook = "0.3"
xkbcommon = "0.7.0"

wayrs-client = "1.0"
wayrs-protocols = { version = "0.13", features = ["xdg-shell"] }
wayrs-utils = { version = "0.13", features = ["shm_alloc", "seats", "cursor"] }

[dependencies.nix]
version = "0.27"
default-features = false
features = ["socket", "uio"]

[patch.crates-io]
pixman = { git = "https://github.com/MaxVerevkin/pixman-rs", branch = "overlype-enum" }

[profile.release]
overflow-checks = true
