[workspace]
members = [".", "eglgbm", "ewc-wayland-scanner", "ewcdbg", "libseat"]

[workspace.package]
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
readme = "README.md"
edition = "2024"

[package]
name = "ewc"
version = "0.1.0"
authors.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
ewc-wayland-scanner = { path = "ewc-wayland-scanner" }
libseat = { path = "./libseat" }

bytemuck = "1.14"
drm = "0.12"
input = "0.9"
libc = "0.2"
memmap2 = "0.9"
pixman = "0.2"
serde = { version = "1.0", features = ["derive"] }
shmemfdrs2 = "1.0"
signal-hook = "0.3"
toml_edit = { version = "0.22", features = ["serde"] }
wayrs-core = "1.0"
xcursor = "0.3"
xkbcommon = "0.8"

gbm-sys = "0.3"
eglgbm = { path = "./eglgbm" }
gl46 = "0.2"

wayrs-client = "1.0"
wayrs-protocols = { version = "0.14", features = ["xdg-shell", "linux-dmabuf-v1"] }
wayrs-utils = { version = "0.17", features = ["shm_alloc", "seats", "cursor", "dmabuf_feedback"] }

[profile.release]
overflow-checks = true
